# zen-mirror-xreal

./: .gitmodules  Makefile  README.md  streaming-client.html
plugin/: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
plugin/inc/: camera.hpp  client.hpp  common.hpp  lib.hpp  log-sink.hpp  loop.hpp
plugin/src/: camera.cpp  client.cpp  lib.cpp  log-sink.cpp  loop.cpp  unity.cpp
unity-project/: .gitignore
unity-project/Assets/: Android.cs  AndroidToast.cs  Camera.cs  Constant.cs  InputHandler.cs  NRLibraryStripConfig.asset  Session.cs  StreamServer.cs  scene.unity
unity-project/Assets/Editor/: Builder.cs
unity-project/Assets/NRSDK/: NRKernalSessionConfig.asset
unity-project/Assets/Plugins/Android/: baseProjectTemplate.gradle  gradleTemplate.properties
unity-project/Assets/UI/: ICONS.md
unity-project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
